--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ethers": "^6.13.5",
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
