--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "ethers": "^6.13.5",
+    "formik": "^2.4.6",
     "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
     "react": "^18.3.1",
