--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,23 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "date-fns": "^4.1.0",
     "ethers": "^6.13.5",
     "formik": "^2.4.6",
     "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.1.1",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
